--- a/_posts/lecture-notes/plp/2017-02-27-23.md
+++ b/_posts/lecture-notes/plp/2017-02-27-23.md
@@ -86,8 +86,12 @@ fun incby x y = x + y
 This is a `fn : int -> int -> int`. 
 You can partially evaluate it with e.g., `incby 2`! This returns a function `fn : int -> int`. 
 
+ML assumes the type of `int`. To use reals, need to specify `fun incby (x::real) y = x + y`.
+
 ```
 fun map f [] = []
     | map f (x::xs) = (f x) :: map f xs
 ```
 This is a `val map = fn: ('a -> 'b) -> 'a list -> 'b list`.
+
+f takes an `x` of type `'a` and produces something of type `'b`. Then this "cons'd" with a list of `'b` things. The intermediate `'a list` represents the second argument of `map`, which contains the remaining `'a` things that need to get "mapped".
