PLP notes- typos

--- a/_posts/lecture-notes/plp/2017-02-15-18.md
+++ b/_posts/lecture-notes/plp/2017-02-15-18.md
@@ -45,7 +45,7 @@ The behavior depends on whether language is functional or imperative, and whethe
 
 ### Value model of variables
 
-There is a *reference model of variables* and *value model of variables*. Two interpretations of a variable: A variable is a named **container** for a value, or a variable is a **value**. 
+There is a *reference model of variables* and *value model of variables*. Two interpretations of a variable: A variable is a named **container** for a value, or a variable is a named **reference** to a value. 
 
 **l-values** are expressions that denote locations. **r-values** are expressions that denote values. These are context-dependent.
 
