--- a/_posts/lecture-notes/plp/2017-02-17-19.md
+++ b/_posts/lecture-notes/plp/2017-02-17-19.md
@@ -38,7 +38,7 @@ Precedence is a language design choice; C has 15 levels of precedence for expres
 
 ## Expressions and statements
 
-Recall: Expressions always produce a value, may or may not have side effects. Statements executed solely for side effects.
+Recall: Expressions always produce a value, may or may not have side effects. Statements executed solely for side effects (e.g., assignments).
 
 ## Boxing
 
