--- a/_posts/lecture-notes/plp/2017-02-20-20.md
+++ b/_posts/lecture-notes/plp/2017-02-20-20.md
@@ -47,7 +47,7 @@ Orthogonality requires a way to initialize composite types. Only saves time for 
 
 ## Definite Assignment
 
-Require that a value be "definitely assigned" to a variable before the bariable is used in any expression. <i>Every possible control path to an expression must assign a value to every variable in the expression</i>. This is the case in Java and C# for all but local variables in a subroutine. 
+Require that a value be "definitely assigned" to a variable before the variable is used in any expression. <i>Every possible control path to an expression must assign a value to every variable in the expression</i>. This is the case in Java and C# for all but local variables in a subroutine. 
 
 Dynamic checks can fail as semantic errors at runtime. Expose some subtle bugs that could exist with compiler supplying default values. Happens in C++.  
 
@@ -69,7 +69,7 @@ Dynamic checks can fail as semantic errors at runtime. Expose some subtle bugs t
 * `a(x) || b(y)` - no point in evaluating `b(y)` if `a(x)` is true
 * this is often more efficient
 * Changes semantics, e.g., `if (z != null && z.w > 0)` ...
-* If subexpressions have side effects, short cuits may not be desireable. Ada does both!
+* If subexpressions have side effects, short circuits may not be desireable. Ada does both!
 
 ## Sequence points
 
