Removed extra term in DDPG noise from blog post
PLP lectures 28 and 29

--- a/_posts/blog/2016-08-21-ddpg-rl.md
+++ b/_posts/blog/2016-08-21-ddpg-rl.md
@@ -404,7 +404,7 @@ with tf.Session() as sess:
             # Added exploration noise. In the literature, they use
             # the Ornstein-Uhlenbeck stochastic process for control tasks
             # that deal with momentum
-            a = actor.predict(np.reshape(s, (1, 3))) + (1. / (1. + i + j))
+            a = actor.predict(np.reshape(s, (1, 3))) + (1. / (1. + i))
 
             s2, r, terminal, info = env.step(a[0])
 
