--- a/_posts/lecture-notes/plp/2017-03-13-26.md
+++ b/_posts/lecture-notes/plp/2017-03-13-26.md
@@ -4,7 +4,7 @@ title:  "PLP: Lecture 26"
 date:   2017-03-13
 category: lecture-notes
 keywords:
-- lambda calculus
+- lambda calculus pt. 1
 ---
 
 <script type="text/javascript" async
