--- a/_posts/lecture-notes/plp/2017-03-17-27.md
+++ b/_posts/lecture-notes/plp/2017-03-17-27.md
@@ -4,7 +4,7 @@ title:  "PLP: Lecture 27"
 date:   2017-03-17
 category: lecture-notes
 keywords:
-- Java Virtual Machine
+- Java Virtual Machine pt. 1
 ---
 
 ## References
