--- a/_posts/lecture-notes/plp/2017-03-22-29.md
+++ b/_posts/lecture-notes/plp/2017-03-22-29.md
@@ -44,7 +44,7 @@ Like normal order, but introduce pointer to expression (rather than copying it) 
 
 Allows for elegant handling of infinite data structures. Used by Haskell. 
 
-**When studying, practice redux formulas for different expressions! E.g., false a b = b is (define false = ($\lambda$ x. $\lambda$ y. y)).
+When studying, practice redux formulas for different expressions! E.g., false a b = b is (define false = ($\lambda$ x. $\lambda$ y. y)).
 
 ## Recusion in $\lambda$ calculus
 
