--- a/_posts/lecture-notes/plp/2017-02-15-18.md
+++ b/_posts/lecture-notes/plp/2017-02-15-18.md
@@ -4,7 +4,8 @@ title:  "PLP: Lecture 18"
 date:   2017-02-15
 category: lecture-notes
 keywords:
-- composite types - sets
+- composite types 
+- sets
 ---
 
 <script type="text/javascript" async
