Prev and Next post buttons, PLP lecture 33

--- a/_posts/lecture-notes/plp/2017-03-29-32.md
+++ b/_posts/lecture-notes/plp/2017-03-29-32.md
@@ -4,7 +4,7 @@ title:  "PLP: Lecture 32"
 date:   2017-03-29
 category: lecture-notes
 keywords:
-- axiomatic semantics
+- axiomatic semantics pt. 1
 ---
 
 <script type="text/javascript" async
