Word change in About

--- a/_posts/lecture-notes/plp/2017-03-17-27.md
+++ b/_posts/lecture-notes/plp/2017-03-17-27.md
@@ -17,7 +17,7 @@ Easier to generate code for stack-based architecture vs. register-based
 
 ## Class files
 
-Defined as a stream of 8-bit bytes consisting of a single ClassFIle structure. 
+Defined as a stream of 8-bit bytes consisting of a single ClassFile structure. 
 
 ```
 ClassFile {
