Final exam review

--- a/_posts/lecture-notes/plp/2017-03-22-29.md
+++ b/_posts/lecture-notes/plp/2017-03-22-29.md
@@ -46,7 +46,7 @@ Allows for elegant handling of infinite data structures. Used by Haskell.
 
 When studying, practice redux formulas for different expressions! E.g., false a b = b is (define false = ($\lambda$ x. $\lambda$ y. y)).
 
-## Recusion in $\lambda$ calculus
+## Recursion in $\lambda$ calculus
 
 Can't just replace a function name with its definition to create a recursive function. Instead, define a variable that represents the function in the RHS of the equation: 
 
@@ -73,4 +73,6 @@ Y = $\lambda$ h.($\lambdax$ x. h(x x))($\lambdax$ x. h(x x))
 ```
 
 Important property: `Y f = f (Y f)`
+
+If a function doesn't have a fixed point, then the evaluation of Y f will not terminate. If there are multiple fixed points, we take the least fixed points. 
 
