--- a/_posts/lecture-notes/plp/2017-04-12-38.md
+++ b/_posts/lecture-notes/plp/2017-04-12-38.md
@@ -25,7 +25,7 @@ There must be a way to initialize the object implicitly, or to explicitly call c
 
 ## Logic Programming
 
-In proglog: 
+In Prolog: 
 
 * The programmer provides a database of facts and rules of inference
 * Queries formulated as assertions involving facts in database
