--- a/_posts/lecture-notes/plp/2017-03-27-31.md
+++ b/_posts/lecture-notes/plp/2017-03-27-31.md
@@ -15,11 +15,16 @@ It can be shown (domain theory) that if the loop terminates, the function has a 
 
 ## Scopes
 
-The environment models the binding between an identifier and its location (address). The `store` maps the location to the value it contains. 
+The environment models the binding between an identifier and its location (address). The `store` function maps the location to the value it contains. 
 
 ## Axiomatic Semantics
 
-Describe programming language semantics in a way that can be used by programmers to develop correct programs.
+Describe programming language semantics in a way that can be used by programmers to develop correct programs. Denotational semantics is mainly of interest to program language designers.
 
 * `java -ea -esa myprog` enables your assertions and system assertions
-* Hoare triple - {precondition}program{postcondition}
+
+Hoare triple:
+
+{precondition}
+**program**
+{postcondition}
