--- a/_posts/lecture-notes/plp/2017-03-31-33.md
+++ b/_posts/lecture-notes/plp/2017-03-31-33.md
@@ -53,14 +53,30 @@ Using rule for if-statement, this is
 {P} while B do S {~B and Q}
 ```
 
-Loop invariants -> true before and after executing loops. Solution to a fixed point equation.
+Loop invariants $\rightarrow$ true before and after executing loops. Solution to a fixed point equation.
 
-For assignment and if-statements, given a postcondition, we can always calculate the weakest precondition by starting with the postcondition and applying axioms (?). Can't do this with loop invariants.
+For assignment and if-statements, given a postcondition, we can always calculate the weakest precondition by starting with the postcondition and applying axioms. Can't do this with loop invariants.
 
 ## Termination
 
 **Partial correctness**: nontermination allowed. **Total correctness**: termination required. Old-fashioned perspective.
 
-**Well founded set**: A set with a partial order is well founded if there are no infinitely decreasing sequences of distinct elements from the set. E.g., the Natural Numbers (no negatives).
+**Well founded set**: A set with a partial order is well founded if there are no infinitely decreasing sequences of distinct elements from the set. E.g., the Natural numbers (no negatives).
 
-To prove a loop terminates, define a *variant function* which takes values from a well founded set. Show that each loop iteration decreases the value of the variant function or establishes ~B. Since the variant function can't decrease forever, the loop must terminate. 
+To prove a loop terminates (i.e., proving total correctness), define a *variant function* which takes values from a well founded set. Show that each loop iteration decreases the value of the variant function or establishes $\neg B$. Since the variant function can't decrease forever, the loop must terminate. 
+
+Let **I** be a loop invariant. 
+
+{%
+    include image.html
+    img="/assets/PLP/axiomatic-semantics-while-loop.png"
+    caption="While loop with loop"
+%}
+
+{%
+    include image.html
+    img="/assets/PLP/axiomatic-semantics-while-loop-2.png"
+    caption="While loop with loop"
+%}
+
+Often times, will need to come up with a loop invariant when trying to prove termination. How to do this? Guess! Take the **guard** of the loop, (e.g., while *guard* do S), delete the conjuct in the post-condition that represents the negation of the guard. What's left is the loop invariant.
