PLP exam review

--- a/_posts/lecture-notes/plp/2017-04-03-34.md
+++ b/_posts/lecture-notes/plp/2017-04-03-34.md
@@ -26,7 +26,7 @@ Start by expressing the postcondition Q, obtain an invariant I and guard B so th
 
 ## Design by Contract
 
-Bertrand Meyer developed Eiffel in 1980's to have more advanced assertions. In DbC, the specification given by preconditions and postconditions forms a contract. Satisfying the precondition is the responsibility of the caller. Satisfying the postcondition is the responsibility of the postcondition.
+Bertrand Meyer developed Eiffel in 1980's to have more advanced assertions. In DbC, the specification given by preconditions and postconditions forms a contract. Satisfying the precondition is the responsibility of the caller. Satisfying the postcondition is the responsibility of the supplier.
 
 Non-redundancy principle: under no circumstances shall the body of a routine ever test for the routine's precondition (Avoid defensive programming)
 
