--- a/_posts/lecture-notes/plp/2017-04-07-36.md
+++ b/_posts/lecture-notes/plp/2017-04-07-36.md
@@ -37,4 +37,5 @@ In Java, all instances share the same code at runtime. Compiler inserts runtime 
 * Type casts are inserted to preserve type safety
 * Generates bridge methods to preserve polymorphism in extended generic types
 * C#'s reification replaces the need for type erasure - allows sharing code when necessary
+* JVM not initially created with generics in mind
 
