PLP FE review pt 2

--- a/_posts/lecture-notes/plp/2017-04-12-38.md
+++ b/_posts/lecture-notes/plp/2017-04-12-38.md
@@ -36,3 +36,5 @@ pred1(...) :- pred2(...), pred3(...),...predN.
 ```
 
 A :- B is the same as B implies A. Variables whose first appearance is on the LHS of the clause have implicit universal quantifiers. Those whose first appearance is in the body of the clause have implicit existential quantifiers.
+
+grandmotherOf(X, GM) :- motherOf(M, GM), motherOf(X, M). This reads as "For all X, GM, the grandmother of X is GM if there exists an M such that the mother of M is GM and the mother of X is M". 
