--- a/_posts/lecture-notes/plp/2017-04-14-39.md
+++ b/_posts/lecture-notes/plp/2017-04-14-39.md
@@ -9,7 +9,7 @@ keywords:
 
 ## Prolog Interpreter
 
-* backward chaining: work backwards to prove things. Usually can construct an AND/OR tree.
+* backward chaining: begin with the thing it is trying to prove and work backwards looking for things that would imply it, until it gets to facts. Usually can construct an AND/OR tree.
 
 ## Resolution Principle
 
@@ -39,6 +39,10 @@ Prolog requires a predicate to be given as a Horn clause.
 G :- A, B,..., F
 ```
 
+[Horn clause](https://en.wikipedia.org/wiki/Horn_clause). A logical formula of a particular rule-like form which gives it useful properties. Specifically, it is a clause (a disjunction of literals) with at most one positive literal. Prolog requires a predicate to be given as a Horn clause. 
+
 Resolution of two Horn clauses is a Horn clause. Convenience!
 
 In Prolog, anything that can't be proved via facts in the database is assumed False. Closed World Assumption. Prologic is Homoiconic - it can define itself.
+
+The "cut operator" is used to prune a search tree when proving, limits backtracking. 
