--- a/_posts/lecture-notes/plp/2017-04-17-40.md
+++ b/_posts/lecture-notes/plp/2017-04-17-40.md
@@ -47,12 +47,12 @@ Compilers that have back ends for different target architectures do as much work
 
 ## Address space organization
 
-Assemblers, linkers, and loaderes typically operate on a pair of related file formats
+Assemblers, linkers, and loaders typically operate on a pair of related file formats
 
 * relocatable object code
 * executable object code
 
-Relocatable object code is acceptable as input to a linker. Executable object code is acceptable as input to a loader. A relocatable object file includes an import table, which IDs instructions that refer to named locations whose addresses are unknown, but are presumed to lie in other files yet to br linked to this one. It also has a relocation table, which IDs instructions that refer to locations within the current file, but that must be modified at link time to reflect the offset of the current file within the final, executable program, as well as an export table, which lists names/addresses of locations in current file that may be referred to in other files. Imported and exported names are external symbols.
+Relocatable object code is acceptable as input to a linker. Executable object code is acceptable as input to a loader. A relocatable object file includes an import table, which IDs instructions that refer to named locations whose addresses are unknown, but are presumed to lie in other files yet to be linked to this one. It also has a relocation table, which IDs instructions that refer to locations within the current file, but that must be modified at link time to reflect the offset of the current file within the final, executable program, as well as an export table, which lists names/addresses of locations in current file that may be referred to in other files. Imported and exported names are external symbols.
 
 Compilers generally generate assembly language that must subsequently be processed by an assembler to create object file. 
 
