--- a/_posts/uf-ml/2017-05-09-sum17-meeting-2.md
+++ b/_posts/uf-ml/2017-05-09-sum17-meeting-2.md
@@ -5,7 +5,7 @@ presenters: Scott Siegel
 papers: 
 - Deep Reinforcement Learning for Dialogue Generation
 paperurls:
-- https://arxiv.org/abs/1606.01541
+- https://arxiv.org/abs/1606.01541git stgit 
 categories:
 - ml-meetings
 ---	
